--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   sqflite: ^2.3.2
   path: ^1.9.0
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
