--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path: ^1.9.0
   flutter_slidable: ^3.1.0
   intl: ^0.19.0
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
